# my-fin

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  vulture_whitelist.py
apps/maintaining/src/: lifespan.py  main.py
apps/reporting/src/: lifespan.py  main.py
apps/scanning/src/: lifespan.py  main.py
data/: catalog.json  economic_calendar.json
docs/: methodology.md  metrics.md  prd.md  shioaji.md  strategy.md
libs/arbitraging/src/: lifespan.py
libs/arbitraging/src/ports/: catalog_provider_port.py  detect_regime_change_port.py  economic_calendar_provider_port.py  event_calendar_provider_port.py  get_events_port.py  get_regime_port.py  sync_catalog_port.py  sync_reference_data_port.py  update_event_calendar_port.py  us_stock_provider_port.py
libs/arbitraging/tests/unit/: test_detect_regime_change.py  test_get_events.py  test_get_regime.py  test_sync_catalog_command.py  test_sync_reference_data_command.py  test_update_event_calendar.py
libs/diagnosing/src/ports/: financial_data_provider_port.py  get_advisor_consensus_port.py  get_diagnosis_port.py  perform_checkup_port.py  run_deep_checkup_port.py  trading_journal_repository_port.py  trigger_exit_port.py
libs/diagnosing/tests/unit/: test_get_advisor_consensus.py  test_get_diagnosis.py  test_perform_checkup.py  test_perform_checkup_advanced.py  test_run_deep_checkup.py  test_trigger_exit.py
libs/hunting/src/: lifespan.py
libs/hunting/src/ports/: calculate_kelly_position_port.py  (+13 more)
libs/linking/src/: lifespan.py
libs/maintaining/src/: lifespan.py
libs/reporting/src/: lifespan.py
(+392 files in other folders)
