[project]
name = "my-fin"
version = "0.1.0"
description = "投資決策系統"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "aiostream>=0.7.1",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "fire>=0.7.1",
    "fredapi>=0.5.2",
    "injector>=0.23.0",
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.2",
    "lxml>=6.0.2",
    "markdown>=3.10",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "playwright>=1.57.0",
    "pyemd>=1.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "setuptools>=80.9.0",
    "shioaji>=1.3.0",
    "yfinance>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["apps", "libs"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:shioaji.*",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:sentry_sdk.*",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "vulture>=2.14",
]

[tool.ruff]
exclude = ["vulture_whitelist.py"]
